# run_Qt

./: CMakeLists.txt  README.md
config/: config.txt  levels.txt  scores.txt  scores1.txt  scores2.txt  scores3.txt
img/: SOL1_PDN.pdn  TROU1_PDN.pdn  button.pdn  iconLevel2.pdn  iconLevel3.pdn  splash.pdn
img/secondLevel/: Floor2_PDN.pdn  TROU12_PDN.pdn
img/thirdLevel/: backgroundLevel3.pdn
src/: Window.cpp  Window.h  main.cpp  utils.cpp  utils.h
src/objects/: Floor.cpp  Floor.h  MovingFloor.cpp  MovingFloor.h  MovingObstacle.cpp  MovingObstacle.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h
src/scenes/: GameScene.cpp  GameScene.h  Scene.cpp  Scene.h  ScoresScene.cpp  ScoresScene.h  SettingsScene.cpp  SettingsScene.h  StartScene.cpp  StartScene.h
src/scenes/levels/: FirstLevel.cpp  FirstLevel.h  SecondLevel.cpp  SecondLevel.h  ThirdLevel.cpp  ThirdLevel.h  levels.txt
src/scenes/levels/firstLevel/: FirstLevel.cpp  FirstLevel.h  scores.txt
src/scenes/levels/secondLevel/: SecondLevel.cpp  SecondLevel.h  floors.txt  movingFloors.txt  obstacles.txt
src/scenes/levels/thirdLevel/: ThirdLevel.cpp  ThirdLevel.h  floors.txt  movingFloors.txt  movingObstacles.txt  obstacles.txt  scores.txt
src/widgets/: ChoiceWidget.cpp  ChoiceWidget.h  EndWidget.cpp  EndWidget.h  PauseWidget.cpp  PauseWidget.h
